# sunflower-lang

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  clear.sh
.github/workflows/: cmake-single-platform.yml
docs/: grammar.md
include/Compiler/Lexer/: Lexer.hpp  TokenType.hpp
include/Compiler/Parser/: ConstNode.hpp  DeclarationNode.hpp  IntegerNode.hpp  LiteralNode.hpp  Node.hpp  Parser.hpp  RootNode.hpp  ValueNode.hpp
src/: CMakeLists.txt  main.cpp
src/Compiler/Lexer/: Lexer.cpp  Lexer.hpp  Token.hpp  Tokens.hpp
src/Compiler/Parser/: ConstNode.cpp  IntegerNode.cpp  Parser.cpp  RootNode.cpp
test/: CMakeLists.txt
test/Lexer/: LexerTest.cpp
test/Parser/: IntegerNodeTest.cpp  ParserTest.cpp
